--- a/src/assets/styles/header/header.css
+++ b/src/assets/styles/header/header.css
@@ -5,9 +5,21 @@ header{
     height: 105px;
 }
 
-.logo{
-    width: 150px;
-    height: 105px;
+.titleLogo, .Subtitle{
+    color: white;
+    font-family: 'cinzel';
+    font-weight: bolder;
+}
+
+.titleLogo{
+    font-size: 28px;
+    margin-bottom: 0px;
+}
+
+.Subtitle{
+    font-size: 18px;
+    margin-top: -8px;
+    margin-bottom: 0px;
 }
 
 ul{
@@ -27,6 +39,19 @@ ul{
     font-weight: 700;
 }
 
-.links:hover{
+.links:hover, .Subtitle:hover, .titleLogo:hover{
     color: red;
+}
+
+@media (max-width: 1050px){
+
+    header{
+        height: 350px;
+    }
+
+    ul{
+        flex-direction: column;
+    }
+
+
 }
