--- a/src/assets/styles/campeoes/campeoes.css
+++ b/src/assets/styles/campeoes/campeoes.css
@@ -3,8 +3,24 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #132225;
+    background-color: #2f3640;
     min-height: 83.5vh;
+}
+
+.createCard{
+    width: 100%;
+    height: 30px;
+    border-radius: 6px;
+    font-size: 18px;
+    font-family: 'cinzel', 'Roboto';
+    font-weight: 800;
+    font-size: 18px;
+    font-weight: 800;
+    background-image: linear-gradient(to bottom, #db982d,#bdbd52,#493616);
+    font-family: 'Cinzel', 'Roboto';
+    background-clip: text;
+    -webkit-background-clip: text; 
+    -webkit-text-fill-color: transparent;
 }
 
 .containerCards{
