--- a/src/assets/styles/cards/cards.css
+++ b/src/assets/styles/cards/cards.css
@@ -1,5 +1,5 @@
 .card{
-    background-color: #20454b;
+    background-color: #353b48;
     border-radius: 10px;
     max-width: 300px;
     margin-top: 40px;
