--- a/src/assets/styles/modal/modal.css
+++ b/src/assets/styles/modal/modal.css
@@ -1,6 +1,6 @@
 .modal{ 
     width: 500px;
-    height: 250px;
+    height: 300px;
     border-radius: 10px;
     align-items: center;
     display: flex;
@@ -8,7 +8,16 @@
     justify-content: space-around;
     font-family: 'cinzel';
     font-weight: 800;
-    background-color: #20454b;
+    background-color: #353b48;
+    position: fixed;
+    bottom: 30vh;
+}
+
+.blackBackground{
+    background-color: black;
+    opacity: 0.8;
+    width: 100%;
+    height: 100%;
 }
 
 .labelModal{
@@ -25,7 +34,7 @@
     width:400px;
     height: 25px;
     border-radius: 5px;
-    border: #0a1618 solid 3px;
+    border: #0a1618 solid 2px;
     font-size: 16px;
     font-weight: 800;
     background-image: linear-gradient(to bottom, #db982d,#bdbd52,#db982d);
@@ -34,6 +43,29 @@
     background-clip: text;
     -webkit-background-clip: text; 
     -webkit-text-fill-color: transparent;
+}
+
+.position1{
+    position: absolute;
+    top: 20px;
+}
+
+.position2{
+    position: absolute;
+    
+}
+
+.position3{
+    position: absolute;
+    bottom: 25px;
+}
+
+.inputBackground{
+    width:406px;
+    height: 29px;
+    background-color: #575d64;
+    border-radius: 3px;
+    margin-top: 22px;
 }
 
 .inputchampion::placeholder{
@@ -45,6 +77,7 @@
     -webkit-background-clip: text; 
     -webkit-text-fill-color: transparent;
 }
+
 .containerInput{
     display: flex;
     flex-direction: column;
