--- a/src/assets/styles/campeoes/campeoes.css
+++ b/src/assets/styles/campeoes/campeoes.css
@@ -7,10 +7,18 @@
     min-height: 83.5vh;
 }
 
-.createCard{
+.buttonBackground{
     width: 100%;
     height: 30px;
+    background-color: #575d64;
     border-radius: 6px;
+}
+
+.createCard{
+    width: 85vw;
+    height: 30px;
+    border-radius: 6px;
+    border: black solid 3px;
     font-size: 18px;
     font-family: 'cinzel', 'Roboto';
     font-weight: 800;
@@ -21,6 +29,8 @@
     background-clip: text;
     -webkit-background-clip: text; 
     -webkit-text-fill-color: transparent;
+    position:static;
+    margin-top: -30px;
 }
 
 .containerCards{
@@ -46,9 +56,7 @@
 }
 
 @media (max-width: 705px){
-
     .containerCards{
         justify-content: center;
     }
-
 }
