--- a/src/assets/styles/modal/modal.css
+++ b/src/assets/styles/modal/modal.css
@@ -10,11 +10,13 @@
     font-weight: 800;
     background-color: #353b48;
     position: fixed;
-    bottom: 30vh;
+    bottom: 20vh;
 }
 
 .blackBackground{
     background-color: black;
+    position: fixed;
+    top: 0px;
     opacity: 0.8;
     width: 100%;
     height: 100%;
@@ -81,4 +83,12 @@
 .containerInput{
     display: flex;
     flex-direction: column;
+}
+
+.hide{
+    display: none;
+}
+
+.show{
+    display: block;
 }
